# kaggle-advanced-ml-course-bbva

./: .gitignore  .pylintrc  CLAUDE.md  Makefile  README.md  STACK.md  main.py  pyproject.toml
.claude/: settings.local.json
data/processed/: submission.csv
docs/: calibration.md  data-flow-schema.md  feature_selection.md  optuna_objective.md
docs/templates/: data-flow-template.md
reports/eda/: test_set_describe.csv  test_set_missing.csv  test_set_profile.csv  test_set_value_counts.csv  train_set_categorical_target_rates.csv  train_set_correlation_with_subscribed.csv  train_set_describe.csv  train_set_missing.csv  train_set_profile.csv  train_set_value_counts.csv
reports/runs/: REPORT.md  evaluation_summary.csv  feature_selection_report.csv
reports/runs/20260408_232422_lgbm_baseline/: feature_importance.csv  run.json  submission.csv
reports/runs/20260408_235220_lgbm_optuna/: run.json
reports/runs/20260408_235638_lgbm_optuna/: run.json
reports/runs/20260409_000244_lgbm_optuna/: run.json
reports/runs/20260409_000437_xgb_optuna/: run.json
reports/runs/20260409_103119_lgbm_optuna/: evaluation_results.csv  feature_importance_pct.csv  optuna_trials.csv  run.json  submission.csv  threshold_sweep.csv
reports/runs/20260409_103119_xgb_optuna/: evaluation_results.csv  feature_importance_pct.csv  optuna_trials.csv  run.json  (+2 more)
src/: config.py  eda.py  evaluations.py  feature_selection.py  metrics.py  pipeline.py  plots.py  predict.py  preprocessing.py  tracking.py  train.py
src/models/: gp_model.py  lgbm_model.py  mlp_model.py  svm_model.py  xgb_model.py
(+62 files in other folders)
