[project]
name = "kaggle-advanced-ml-course-bbva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "ipykernel>=7.2.0",
    "kaggle>=2.0.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "optuna-integration[mlflow]>=4.8.0",
    "pandas>=2.0.0,<3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]

[tool.ruff]
extend-exclude = ["playground/"]
